@@ -5,10 +5,8 @@ import static org.junit.jupiter.api.Assertions.*;
 import com.mipt.hsse.hssetechbackend.DatabaseSuite;
 import com.mipt.hsse.hssetechbackend.data.entities.HumanUserPassport;
 import com.mipt.hsse.hssetechbackend.data.entities.Transaction;
-import com.mipt.hsse.hssetechbackend.data.entities.User;
 import com.mipt.hsse.hssetechbackend.data.entities.Wallet;
 import com.mipt.hsse.hssetechbackend.data.repositories.JpaHumanUserPassportRepository;
-import com.mipt.hsse.hssetechbackend.data.repositories.JpaUserRepository;
 import com.mipt.hsse.hssetechbackend.data.repositories.JpaWalletRepository;
 import com.mipt.hsse.hssetechbackend.payments.exceptions.WalletNotFoundException;
 import com.mipt.hsse.hssetechbackend.payments.services.dto.TransactionInfo;
@@ -46,23 +44,16 @@ public class TransactionServiceCreatingTransactionTest extends DatabaseSuite {
 
   @BeforeEach
   public void setUp() {
-    var testUser = new User("test");
-    var testUserPassport = new HumanUserPassport(123L, "Test", "User", "test@phystech.edu", testUser);
-    testWallet = new Wallet();
-    testWallet.setBalance(BigDecimal.valueOf(100.00));
-
-    testWallet.setOwner(testUserPassport);
-    testUserPassport.setUser(testUser);
-
+    var testUserPassport = new HumanUserPassport(123L, "Test", "User", "test@phystech.edu");
     passportRepository.save(testUserPassport);
-    userRepository.save(testUser);
+    testWallet = walletRepository.findByOwnerId(testUserPassport.getId());
+    testWallet.setBalance(BigDecimal.valueOf(100));
     walletRepository.save(testWallet);
   }
 
   @AfterEach
   public void clear() {
     passportRepository.deleteAll();
-    userRepository.deleteAll();
     walletRepository.deleteAll();
   }
 
@@ -73,7 +64,7 @@ public class TransactionServiceCreatingTransactionTest extends DatabaseSuite {
     Transaction resultTrans = transactionService.createTransaction(transactionInfo);
 
     assertNotNull(resultTrans);
-    assertEquals(100, walletRepository.findAll().get(0).getBalance());
+    assertEquals(100, walletRepository.findAll().getFirst().getBalance());
     assertEquals(testWallet.getId(), resultTrans.getWallet().getId());
   }
 
@@ -81,13 +72,13 @@ public class TransactionServiceCreatingTransactionTest extends DatabaseSuite {
   public void testTransactionCreationWalletNotFound() {
     var transactionInfo = new TransactionInfo(BigDecimal.valueOf(50.00), UUID.randomUUID(), "Гель для душа", Optional.of("О полмолив, мой нежный гель"));
     assertThrows(WalletNotFoundException.class, () -> transactionService.createTransaction(transactionInfo));
-    assertEquals(100, walletRepository.findAll().get(0).getBalance());
+    assertEquals(100, walletRepository.findAll().getFirst().getBalance());
   }
 
   @Test
   public void testTransactionCreationDescriptionEmpty() {
     var transactionInfo = new TransactionInfo(BigDecimal.valueOf(50.00), testWallet.getId(), "Гель для душа", Optional.empty());
     assertDoesNotThrow(() -> transactionService.createTransaction(transactionInfo));
-    assertEquals(100, walletRepository.findAll().get(0).getBalance());
+    assertEquals(100, walletRepository.findAll().getFirst().getBalance());
   }
 }
